--- a/s/Dockerfile1
+++ b/s/Dockerfile1
@@ -37,4 +37,4 @@ COPY / .
 RUN python3 --version && python --version
 
 # Make new directory for installation
-RUN chmod +x installer && ./installer -d /usr/local/sde -e default -f || true
+RUN chmod +x installer && ./installer -d /usr/local/sde -e default -f
